create a page layout in index.html

--- a/index.html
+++ b/index.html
@@ -4,7 +4,37 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css" />
+    <title>Etch-a-Sketch</title>
   </head>
-  <body></body>
+  <body>
+    <section class="drawing">
+      <h1 class="drawing__name">Etch-a-Sketch</h1>
+      <section class="drawing__board">
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+      </section>
+    </section>
+    <section class="customization">
+      <input type="color" class="customization__color" />
+      <button class="customization__color btn active">Color mode</button>
+      <button class="customization__rainbow btn">Rainbow mode</button>
+      <button class="customization__clear btn">Clear</button>
+      <input class="customization__range" type="range" />
+    </section>
+  </body>
 </html>
