make arrangement of elements

--- a/index.html
+++ b/index.html
@@ -29,10 +29,11 @@
         <div></div>
       </section>
     </section>
+
     <section class="customization">
       <input type="color" class="customization__color" />
-      <button class="customization__color btn active">Color mode</button>
-      <button class="customization__rainbow btn">Rainbow mode</button>
+      <button class="customization__color-mode btn active">Color mode</button>
+      <button class="customization__rainbow-mode btn">Rainbow mode</button>
       <button class="customization__clear btn">Clear</button>
       <input class="customization__range" type="range" />
     </section>
