start landscape layout

--- a/index.html
+++ b/index.html
@@ -51,6 +51,6 @@
       </div>
     </section>
 
-    <footer class="footer"><a href="https://github.com/Alan1234111/Etch-a-Sketch">&#169 Alan Github</a></footer>
+    <!-- <footer class="footer"><a href="https://github.com/Alan1234111/Etch-a-Sketch">&#169 Alan Github</a></footer> -->
   </body>
 </html>
