--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
           <span class="customization__range-number">16</span> x
           <span class="customization__range-number">16</span>
         </p>
-        <input class="customization__range" type="range" />
+        <input class="customization__range" type="range" max="64" />
       </div>
     </section>
 
-    <!-- <footer class="footer"><a href="https://github.com/Alan1234111/Etch-a-Sketch">&#169 Alan Github</a></footer> -->
+    <footer class="footer"><a href="https://github.com/Alan1234111/Etch-a-Sketch">&#169 Alan Github</a></footer>
   </body>
 </html>
