--- a/index.html
+++ b/index.html
@@ -36,5 +36,7 @@
     </section>
 
     <footer class="footer"><a href="https://github.com/Alan1234111/Etch-a-Sketch">&#169 Alan Github</a></footer>
+
+    <script src="script.js"></script>
   </body>
 </html>
