Change min max value of the input

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <span class="customization__range-number">16</span> x
           <span class="customization__range-number">16</span>
         </p>
-        <input class="customization__range" type="range" max="64" />
+        <input class="customization__range" type="range" min="1" max="64" />
       </div>
     </section>
 
