--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@700&display=swap"
       rel="stylesheet"
     />
+    <link rel="icon" href="etch-a-sketch-icon.png" type="image/icon type">
     <link rel="stylesheet" href="style.css" />
     <title>Etch-a-Sketch</title>
   </head>
